Add total chord count to Harmony Engine section

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <ul class="compact-list">
                 <li>12-oscillator architecture automatically pitches synths and samples to play complex chords</li>
                 <li>7 chord buttons representing diatonic scale degrees — all automatically transpose when changing keys</li>
-                <li>16+ chord types accessible via joystick: triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
+                <li>28 chord types accessible via joystick across three modes (196 total unique chords): triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
                 <li>Context-aware chord modifications adapt based on whether the base chord is major, minor, or diminished</li>
                 <li>Extended and chromatic modes unlock sophisticated harmonic possibilities without music theory knowledge</li>
             </ul>
