--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
             <div class="bullet-title">Harmony Engine</div>
             <ul class="compact-list">
                 <li>12-oscillator architecture automatically pitches synths and samples to play complex chords</li>
-                <li>7 chord buttons representing diatonic scale degrees — all automatically transpose when changing keys</li>
-                <li>28 chord types accessible via joystick across three modes (196 total unique chords): triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
-                <li>Context-aware chord modifications adapt based on whether the base chord is major, minor, or diminished</li>
+                <li>7 chord buttons representing diatonic scale degrees — all automatically transpose across 12 keys</li>
+                <li>7,000+ unique chord voicings (28 chord types × 7 buttons × 12 keys × 3 inversions): triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
+                <li>Per-button and global octave shifting for additional range and voicing options</li>
                 <li>Extended and chromatic modes unlock sophisticated harmonic possibilities without music theory knowledge</li>
             </ul>
         </div>
