Correct chord count to 1,000+ accounting for diatonic overlap

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <ul class="compact-list">
                 <li>12-oscillator architecture automatically pitches synths and samples to play complex chords</li>
                 <li>7 chord buttons representing diatonic scale degrees — all automatically transpose across 12 keys</li>
-                <li>7,000+ unique chord voicings (28 chord types × 7 buttons × 12 keys × 3 inversions): triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
+                <li>1,000+ unique chord voicings (28 chord types × 12 chromatic roots × 3 inversions): triads, suspended, 7ths, 9ths, 11ths, 13ths, and advanced jazz voicings</li>
                 <li>Per-button and global octave shifting for additional range and voicing options</li>
                 <li>Extended and chromatic modes unlock sophisticated harmonic possibilities without music theory knowledge</li>
             </ul>
