Update team description: firmware, marketing, and R&D handled directly

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <h2>Team & Structure</h2>
 
         <div class="key-point">
-            HiChord is a one-person company — 100% founder owned and operated. All design, firmware, and R&D are handled directly.
+            HiChord is a one-person company — 100% founder owned and operated. All firmware, marketing, and R&D are handled directly.
         </div>
 
         <h3>Strategic Partners</h3>
