--- a/index.html
+++ b/index.html
@@ -486,6 +486,10 @@
                 <div class="partner-name">FirstCFO</div>
                 <div class="partner-desc">Fractional finance leadership</div>
             </div>
+            <div class="partner">
+                <div class="partner-name">In-House AI Tooling</div>
+                <div class="partner-desc">Custom AI tools for rapid feature testing and development</div>
+            </div>
         </div>
 
         <p style="margin-top: 20px; font-weight: 500;">This lean structure enables enterprise-level execution with almost no overhead.</p>
